<!--
  ~ Copyright (c) 2020 LOUBIERE Antonin <https://www.github.com/AntoninLoubiere/>
  ~
  ~ This file is part of Diakôluô project <https://www.github.com/AntoninLoubiere/Diakoluo/>.
  ~
  ~     Diakôluô is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Diakôluô is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     A copy of the license is available in the root folder of Diakôluô, under the
  ~     name of LICENSE.md. You could find it also at <https://www.gnu.org/licenses/gpl-3.0.html>.
  -->

<resources>
    <string name="app_name">Diakôluô</string>
    <string name="information_line">Version dev-0.3.0 - Antonin LOUBIÈRE - GPL 3</string>
    <string name="title">Title</string>
    <string name="very_long_description">Default description, a description can be very long. When I say very long, it\'s because a description can become very long. But I think I can do less long but it\'s needed to the demo.</string>
    <string name="created_date_test_format">Created the $1%s at $2%s</string>
    <string name="last_modification_test_format">Last modification the %1$s at %2$s</string>
    <string name="number_test_did_format">You have done %d tests</string>
    <string name="view_test_title_main_fragment">General</string>
    <string name="view_test_title_column_fragment">Columns</string>
    <string name="view_test_title_answer_fragment">Answer</string>
    <string name="play_test_button_content_description">Play</string>
    <string name="number_question_to_ask">Select the number of questions:</string>
    <string name="number_column_to_show">Select the number of column shown:</string>
    <string name="number_column_to_show_seekbar_textview">%d/%d (%d columns)</string>
    <string name="valid">validate</string>
    <string name="continue_text">Continue</string>
    <string name="skip">(Skip)</string>
    <string name="score_20" translatable="false">%.2f/20</string>
    <string name="score_precise" translatable="false">%.2f/%.2f</string>
    <string name="restart">Restart</string>
    <string name="main_menu">Main menu</string>
    <string name="description">Description</string>
    <string name="dialog_delete_test_title">Delete test</string>
    <string name="dialog_delete_test_message">Are you sure to delete this test : \"%s\" ?</string>
    <string name="cancel">Cancel</string>check
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="error_label_title_blank">The name of the test can\'t be blank</string>
    <string name="error_label_title_already_exist">A test with this name already exist.</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="add_answer">Add answer</string>
    <string name="add_column">Add column</string>
    <string name="column_name_format" translatable="false">%s:</string>
    <string name="column_type">Column type:</string>
    <string name="export">Export</string>
    <string name="list_test">List of tests</string>
    <string name="test_deleted">\"%s\" has been deleted</string>
    <string name="close">close</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Welcome on Diakôluô ! To start using Diakôluô, you need to set some settings.\n\nDiakôluô is an open source project under the <a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU Public License 3.0</a>. Source code is available on <a href="https://github.com/AntoninLoubiere/Diakoluo">GitHub</a>.</string>
    <string name="accept_and_continue">Accept and continue</string>
    <string name="data_caption">Note: you can change this in settings at any point</string>
    <string name="check_box_crash">Allow the send of crash report for development purpose only.</string>
    <string name="check_box_analytics">Allow the send of anonymous non-sensible data for development purpose only.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_info" translatable="false">%1$d/%2$d</string>
    <string name="create_new_data_edit">New</string>
    <string name="dialog_new_column_title">Create new column</string>
    <string name="dialog_new_column_message">Do you want to create a new column ?</string>
    <string name="dialog_create_new_data_edit">Create</string>
    <string name="dialog_new_answer_title">Create new Answer</string>
    <string name="dialog_new_answer_message">Do you want to create a new answer ?</string>
    <string name="select_export">Select export file type:</string>
    <string name="all_features_may_not_be_available_in_this_format">All features may not be available in this format !</string>
    <string name="save_test_done">Save number of test done</string>
    <string name="save_column_header_save">Save column name at the top of the file</string>
    <string name="save_column_type_header_save">Save column type at the top of the file</string>
    <string name="separator">Separator:</string>
    <string name="dialog_export_error_title">Export error</string>
    <string name="dialog_export_error_message">An error occur during the exportation. The file may not work.</string>
    <string name="test_exported">The test has been successfully exported</string>
    <string name="import_text">Import</string>
    <string name="dialog_import_error_title">Import error</string>
    <string name="dialog_import_error_message">An error occur during the importation. The test hasn\'t been added.</string>
    <string name="import_hint_title_test">Name of the test</string>
    <string name="save_column_header_load">Load column name at the top of the file</string>
    <string name="save_column_type_header_load">Load column type at the top of the file</string>
    <string name="file_preview">File preview:</string>
    <string name="test_default_name">Test</string>
    <string name="default_column_name">Column %d</string>
    <string name="dialog_export_error_csv_message">An error occur during the importation. Check if it is the correct separator. The test hasn\'t been added.</string>
    <string name="reset">Reset</string>
    <string name="dialog_reset_title">Reset stats</string>
    <string name="dialog_reset_message">Are you sure do reset all statistics (number of test done…)</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="remove_useless_spaces">Remove useless spaces</string>
    <string name="allow_auto_completion">Allow auto completion</string>
    <string name="default_string_list">No option - List empty</string>
    <string name="options">Options:</string>
    <string name="add_option">Add an option</string>
    <string name="option">Option</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="can_be_hide">Can be asked during a test</string>
    <string name="can_be_show">Can be reveal during a test</string>
    <string name="column_settings_score_view">A right answer will give %1$s point(s), not answering will give %2$s and a wrong answer will give you %3$s point(s).</string>
    <string name="column_settings_score_edit">Score</string>
    <string name="points">point(s)</string>
    <string name="positive_number_required">A positive number is required</string>
    <string name="number_required">A valid number is required</string>
    <string name="score_method">Score method:</string>
    <string name="score_method_view">Score method: %s</string>
    <string name="score_right_text_view">Right answer:</string>
    <string name="score_wrong_text_view">Wrong answer:</string>
    <string name="score_skipped_text_view">Skipped answer:</string>
    <string name="score_wrong_greater_right">A wrong answer will give more points than a right answer.</string>
    <string name="score_right_lesser_skipped">A skipped answer will give more point than a right answer.</string>
    <string name="score_skipped_lesser_wrong">A wrong answer will give more points than a skipped answer.</string>
    <string name="column_list_skipped_item" />
    <string name="no_score">This test doen\'t give score</string>
    <string name="score_test_format" translatable="false">%s</string>
    <string name="default_value_column_settings">Default value (edit):</string>
    <string name="test_default_description" />
    <string name="loading">Loading</string>
    <string name="dialog_error_cant_load_test">Can\'t load the test.</string>
    <string name="dialog_edit_test_existing_title">Editable test</string>
    <string name="dialog_edit_test_existing_message">You haven\'t finish to edit \"%s\". Do you want to continue edit it ?</string>
    <string name="dialog_edit_unsave_title">Test unsaved</string>
    <string name="dialog_edit_unsave_message">All changes aren\'t save and they will be lost if you quit.</string>
    <string name="quit">quit</string>
    <string name="float_formatter">%f</string>
    <string name="condition_not_name">Not gate</string>
    <string name="condition_not_description">Invert the result of a condition.</string>
    <string name="condition_not_condition_name">Condition</string>
    <string name="condition_not_condition_description">The description to invert</string>
    <string name="condition_true_name">True</string>
    <string name="condition_true_description">A condition that is always true.</string>
    <string name="condition_equals_name">Equals</string>
    <string name="condition_equals_description">Test if a answer is equals to the value.</string>
    <string name="condition_skipped_name">Answer skipped</string>
    <string name="condition_skipped_description">Test if the user has skip the answer</string>
    <string name="condition_and_name">And gate</string>
    <string name="condition_and_description">Test if two condition are true.</string>
    <string name="condition_and_condition_name">Condition</string>
    <string name="condition_and_condition_description">A condition to test.</string>
    <string name="condition_or_name">Or gate</string>
    <string name="condition_or_description">Test if one of the two condition is true (or inclusive).</string>
    <string name="condition_or_condition_name">Condition</string>
    <string name="condition_or_condition_description">A condition to test.</string>
    <string name="condition_xor_name">Xor gate</string>
    <string name="condition_xor_description">Test if only one of the two condition is true (or exclusive).</string>
    <string name="condition_xor_condition_name">Condition</string>
    <string name="condition_xor_condition_description">A condition to test.</string>
    <string name="action_set_name">Set score</string>
    <string name="action_set_description">Set the score of a certain amount.</string>
    <string name="action_set_score_name">Score</string>
    <string name="action_set_score_description">The score to set.</string>
    <string name="action_add_name">Add score</string>
    <string name="action_add_description">Add an amount to the score.</string>
    <string name="action_add_score_name">Score</string>
    <string name="action_add_score_description">The score to add.</string>

</resources>
