<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_test.MainInformationsViewTestFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/noTestTextView"
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_test_selected"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/titleTextView"
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:layout_below="@id/titleTextView"/>

        <TextView
            android:id="@+id/createdDateTextView"
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:text="@string/created_date_test_format"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/lastModificationTextView"
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/last_modification_test_format"
            android:layout_below="@id/createdDateTextView"/>

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastModificationTextView"
            android:text="@string/very_long_description" />

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:layout_below="@id/descriptionTextView"/>

        <TextView
            android:id="@+id/numberTestDid"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_test_did_format"
            android:layout_below="@id/descriptionTextView"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>