<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationBottomBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorPrimarySurface"
    android:orientation="horizontal">

    <Button
        android:id="@+id/previousButton"
        style="@style/NavigationBottomButton"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/navigationTextView"
        android:drawableLeft="@drawable/ic_keyboard_arrow_left_white_24dp"
        android:text="@string/previous"
        android:textAlignment="textStart" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/navigationTextView"
        style="@style/Body0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/navigation_info"
        android:textColor="?colorOnPrimarySurface" />

    <Button
        android:id="@+id/nextButton"
        style="@style/NavigationBottomButton"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/navigationTextView"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
        android:text="@string/next"
        android:textAlignment="textEnd" />

</RelativeLayout>