<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_test.MainInformationViewTestFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text|textAutoComplete|textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/createdDateTextView"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextInputLayout"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/created_date_test_format"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/lastModificationTextView"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createdDateTextView"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/last_modification_test_format"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastModificationTextView"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="text|textAutoComplete|textCapSentences|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/numberTestDid"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionTextInputLayout"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/number_test_did_format" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>